--- a/ele-vue-learning/package.json
+++ b/ele-vue-learning/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
+    "element-ui": "^2.9.1",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
