--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ after_script:
   - npm i
   - npm run build
   # - cd ./build
-  # - git init
+  - git init
   - git config user.name "${USER_NAME}"
   - git config user.email "${USER_EMAIL}"
   - git add .
