--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 after_script:
   - npm i
   - npm run build
-  # - cd ./build
+  - cd ./build
   - git init
   - git config user.name "${USER_NAME}"
   - git config user.email "${USER_EMAIL}"
