--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 
 after_script:
   - npm i
+  - npm install electron-packager -g
+  - yum install wine
   - npm run build
   - cd ./build
   - git init
