--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.18.1",
     "element-ui": "^2.9.1",
     "vue": "^2.5.16",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
